# tensorvault

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  Makefile  README.md  buf.gen.yaml  buf.yaml  config.yaml  docker-compose.yaml  go.mod  go.sum
.github/workflows/: ci.yaml
api/proto/tensorvault/v1/: tensorvault.proto
cmd/tv/: main.go
cmd/tv-server/: main.go
cmd/tv/commands/: add.go  cat.go  checkout.go  commit.go  init.go  integration_test.go  log.go  push.go  rm.go  root.go
docs/adr/: 001-core-data-model.md  002-content-defined-chunking-strategy.md  003-storage-abstraction-and-disk-layout.md  004-cli-application-architecture.md  005-staging-area-state-management.md  006-deterministic-tree-construction.md  007-vcs-state-machine-model.md  008-metadata-seperation-architecture.md  009-concurrency-control-via-optimistic-locking.md  010-domain-primitives-enforcement.md  011-concurrent-ingestion-pipeline.md  012-caching-layer-strategy.md  013-parallel-restore-architecture.md  014-cloud-native-rpc-architecture.md  015-thin-client-and-two-phase-upload.md
docs/blog/: Merkle-DAG.md  week1.md
experiments/cas-demo/: main.go
experiments/fastcdc-core/: main.go
pkg/api/tvrpc/v1/: tensorvault.pb.go  tensorvault_grpc.pb.go
pkg/app/: app.go  app_test.go
pkg/chunker/: chunker.go  chunker_test.go  tables.go
pkg/client/: client.go
pkg/config/: loader.go
pkg/core/: chunk.go  commit.go  core_test.go  filenode.go  hash.go  helpers_test.go  link.go  object.go  tree.go
pkg/exporter/: exporter.go  exporter_test.go  printer.go
pkg/ignore/: ignore.go  ignore_test.go
pkg/index/: index.go  index_test.go
pkg/ingester/: ingester.go  ingester_test.go
pkg/meta/: adapter.go  helpers_test.go  models.go  repository.go  repository_test.go
pkg/refs/: manager.go  manager_test.go
pkg/server/: interceptors.go
pkg/service/: data.go  data_test.go  helper_test.go  meta.go  meta_test.go  stream_adapter.go
pkg/storage/: store.go
pkg/storage/cache/: redis_store.go  redis_store_test.go
pkg/storage/disk/: adapter.go  adapter_test.go
pkg/storage/s3/: adapter.go  adapter_test.go
pkg/treebuilder/: builder.go  builder_test.go
pkg/types/: common.go  common_test.go
sdk/python/: pyproject.toml
sdk/python/src/buf/validate/: validate_pb2.py  validate_pb2.pyi
sdk/python/src/tensorvault/: __init__.py
sdk/python/src/tensorvault/api/: client.py  index.py  io.py
sdk/python/src/tensorvault/core/: chunker.py  hasher.py
sdk/python/src/tensorvault/grpc/: stub_manager.py
sdk/python/src/tensorvault/utils/: errors.py
sdk/python/src/tensorvault/v1/: tensorvault_pb2.py  tensorvault_pb2.pyi  tensorvault_pb2_grpc.py
sdk/python/tests/integeration/: test_upload_flow.py
sdk/python/tests/integration/: test_round_trip.py  test_workflow.py
tests/e2e/: workflow_test.go
