[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorvault"
version = "0.1.0"
description = "Python SDK for TensorVault: The AI Data Infrastructure."
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.50.0",
    "protobuf>=4.0.0",
    "google-api-python-client>=2.0.0",
    # 【新增】这是关键！它包含了 buf.validate 的 Python 实现
    "protovalidate>=0.1.0",
]

# 开发依赖 (用于测试和类型检查)
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "grpcio-tools>=1.50.0", # 包含 protoc 编译器，虽然我们主要用 buf
    "types-protobuf",       # MyPy 的类型存根
]

[tool.setuptools.packages.find]
where = ["src"]  # 告诉打包工具，源码在 src 目录下



[tool.mypy]
# 全局设置
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
# 告诉 MyPy 源码根目录在哪里，解决 import 路径解析问题
mypy_path = "src"
exclude = ["^src/buf/"]
# --- 针对生成的代码的豁免规则 ---

# 1. 忽略 tensorvault.v1 下生成的代码报错
[[tool.mypy.overrides]]
module = "tensorvault.v1.*"
ignore_errors = true

# 2. 忽略 buf.* 下生成的依赖代码报错
[[tool.mypy.overrides]]
module = "buf.*"
ignore_errors = true


# --- 忽略所有第三方库 ---
[[tool.mypy.overrides]]
module = [
    "pandas.*", "numpy.*", "torch.*", "torch_geometric.*", "omegaconf.*",
    "hydra.*", "rdkit.*", "tqdm.*", "sklearn.*", "research_template.*", "joblib.*","faiss.*"
]
ignore_missing_imports = true
# sdk/python/pyproject.toml

[tool.ruff]
# 1. 基础配置
line-length = 88
target-version = "py39"

# 2. 排除生成的文件 (非常重要，否则会删掉 _pb2.py 里看似没用的导入)
exclude = [
    "**/tensorvault/v1/*_pb2.py",
    "**/tensorvault/v1/*_pb2.pyi",
    "**/tensorvault/v1/*_pb2_grpc.py",
]

[tool.ruff.lint]
# 3. 启用规则
# E, W: pycodestyle (标准错误/警告)
# F: Pyflakes (关键！F401 就是检测未使用的导入)
# I: Isort (关键！负责导入排序)
select = ["E", "W", "F", "I"]

# 4. 忽略规则 (可选)
ignore = ["E501",]

[tool.ruff.lint.isort]
# 5. Isort 配置：确保本地包和第三方包分开
known-first-party = ["tensorvault"]
